# astro-core

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
astro-io/: Cargo.toml  README.md
astro-io/src/: fits.rs  lib.rs  xisf.rs
astro-metadata/: Cargo.toml  README.md
astro-metadata/src/: fits_parser.rs  lib.rs  types.rs  xisf_parser.rs
astro-metrics/: Cargo.toml  README.md
astro-metrics/src/: background_metrics.rs  lib.rs  quality_metrics.rs  sep_detect.rs  star_metrics.rs  types.rs
docs/: Astro-core_API.md  AstroMetadataPlan.md  CleanupChanges.md  CrateringAFS.md  FileOrgTokens.md  FormatArchitecturePlan.md  MetricsNotesAndIdeas.md  MoreSEPMetrics.md  NINA_PathTokens.csv  NINA_Path_String.txt  Next_steps4Quality.md  QualityMetrics.md  Supported_NINA_Tokens.md  ravensky-astro_API.md
examples/: basic_analysis.rs  dump_fits_metadata.rs  dump_xisf_metadata.rs  metadata_stats.rs  process_test_images.rs
examples/shared/: metadata_dump.rs  metadata_stats.rs
src/: lib.rs
tests/: integration_test.rs
