# astro-core/Cargo.toml
[workspace]
members = [
    "astro-io",
    "astro-metadata",
    "astro-metrics",
]

[workspace.package]
version = "0.2.0"
authors = ["Dean Ostergaard <dean@deanostergaard.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/dostergaard/astro-core"

[package]
name = "astro-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core libraries for astronomical image file analysis and manipulation."

[dependencies]
astro-io = { path = "./astro-io", version = "0.2.0" }
astro-metadata = { path = "./astro-metadata", version = "0.2.0" }
astro-metrics = { path = "./astro-metrics", version = "0.2.0" }
