[package]
name = "astro-io"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "I/O operations for astronomical image formats"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
fitsio = "0.21"
quick-xml = "0.30"
astro-metadata = { path = "../astro-metadata", version = "0.1.0" }
byteorder = "1.5.0"
flate2 = "1.0.28"