[package]
name = "astro-metadata"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Metadata handling for astronomical images"
documentation = "https://docs.rs/astro-metadata"
readme = "README.md"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
fitsio.workspace = true
log.workspace = true
astro-io.workspace = true
