[package]
name = "astro-metrics"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Statistical metrics for astronomical images"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
astro-metadata = { path = "../astro-metadata", version = "0.2.0" }
astro-io = { path = "../astro-io", version = "0.2.0" }
sep-sys = "1.3.0"
