[package]
name = "astro-metrics"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Statistical metrics for astronomical images"
documentation = "https://docs.rs/astro-metrics"
readme = "README.md"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
ndarray.workspace = true
serde.workspace = true
astro-metadata.workspace = true
astro-io.workspace = true
sep-sys.workspace = true
